plugins {
	id 'fabric-loom' version "${loom_version}"
	id 'maven-publish'
}

version = project.mod_version
group = project.maven_group

repositories {
	maven {
		name = "Curse Maven"
		url = "https://www.cursemaven.com"
		content {
			includeGroup "curse.maven"
		}
	}
	flatDir {
		dirs 'libs'
	}
}

dependencies {
	minecraft "com.mojang:minecraft:${project.minecraft_version}"
	mappings loom.officialMojangMappings()
	modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"

	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_api_version}"
	implementation files("libs/optics-java-1.0-SNAPSHOT.jar")

	modImplementation "curse.maven:illager-invasion-891324:6192870"
	modImplementation "curse.maven:puzzles-lib-495476:6918566"
	modImplementation files("libs/puzzlesaccessapi-fabric-20.1.1.jar")
	modImplementation files("libs/extensibleenums-fabric-7.0.1.jar")
	modImplementation "curse.maven:forge-config-api-port-547434:7260491"
//	modImplementation "curse.maven:curios-309927:5843594"

//	modImplementation "libs:L_Enders_Cataclysm:3.31"
//	modImplementation "libs:lionfishapi:3.0"

	modImplementation "curse.maven:kubejs-238086:8020594"
	modImplementation "curse.maven:rhino-416294:6186969"
	modImplementation "curse.maven:architectury-api-419699:5137936"
}

processResources {
	inputs.property "version", project.version

	filesMatching("fabric.mod.json") {
		expand "version": project.version
	}
}

tasks.withType(JavaCompile).configureEach {
	it.options.release = 21
}

java {
	withSourcesJar()
	sourceCompatibility = JavaVersion.VERSION_21
	targetCompatibility = JavaVersion.VERSION_21
}

jar {
	from("LICENSE") {
		rename { "${it}_${project.name}"}
	}
}

publishing {
	publications {
		create("mavenJava", MavenPublication) {
			from components.java
		}
	}
	repositories {}
}
